[project]
name = "rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.0",
    "langchain[anthropic,google-genai,openai]>=1.2.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
    "numpy>=2.0.0,<2.4.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.5.0,<2.6.0",
    "torchvision>=0.20.0,<0.21.0",
    "transformers>=4.57.3",
    "unstructured[pdf]>=0.18.27",
    "langgraph-api>=0.6.35",
]

[tool.uv]
# Use PyTorch CPU-only wheel for faster installation and smaller size
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
# Allow selecting best match from all indexes to avoid conflicts
index-strategy = "unsafe-best-match"
